# bayesian-demo

./: .gitignore  GETTING_STARTED.md  PROJECT_OVERVIEW.md  README.md  debug_sdk.py  pyproject.toml  setup.sh  test_single.py
data/: subjects.json  subjects_template.json
data/processed/: nhanes_ground_truth.json  nhanes_joint_distribution.csv
src/: claude_runner.py  example_runner.py  experiment_core.py  ollama_runner.py
src/data/: __init__.py  nhanes.py  nhanes_loader.py
src/evaluation/: __init__.py  calibration.py  metrics.py  statistical_tests.py
src/models/: schemas.py
src/notebooks/: NHANES.ipynb  NHANES_ground_trush_distribution.ipynb  NHANES_visualize_distributions.ipynb  nhanes_data.ipynb  nhanes_joint_distribution.ipynb  result.json  result.txt
src/prompts/: probabilistic_agent_prompt.md
src/tools/: __init__.py  pymc_executor.py  web_search.py
src/tools/tests/: test_pymc_executor.py
tests/: __init__.py  conftest.py  test_metrics.py  test_predictor.py  test_schemas.py
